[package]
name = "fedilinks-backend-rs"
version = "0.1.0"
edition = "2021"
authors = [ "seanch0n <83823443+seanch0n@users.noreply.github.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0", features=['http', 'axum'] }
worker-macros = { version="0.5.0", features=['http'] }

tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
serde_json = "1.0.138"

##### user added crates #####

axum  = { version = "0.8.1", default-features = false, features = ["json"] }
serde = { version = "1.0.196", features = ["derive"]}
# environment variable loading
dotenvy = "0.15.7"
#rand= { version = "0.9.0", features = ["std_rng, wasm_js"]}
rand = "0.8.5"

# this is REQUIRED for building on osx for some reason? the 0.3.1 with wasm_js
# flags like documented do not work here, even though they work on windows :(:
getrandom = { version = "0.2", features = ["js"]}
url = "2.5.4"